@@ -1,3 +1,8 @@
+2025-07-08  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el: Disable `visual-wrap-prefix-mode', because it conflicts
+	with `telega-chat-mode'.
+
 2025-07-07  Zhengyi Fu  <i@fuzy.me>
 
 	Update configuration for svn
